# simpler

./: .gitignore  CMakeLists.txt  README.md  SConstruct  drawing.c  drawing.cc  drawing.h  run  simpler.c  simpler.i  simpler.ss  util.h  vs.cc  vs.ss
